--- a/views/updates.hbs
+++ b/views/updates.hbs
@@ -85,21 +85,21 @@
                         <div class="col-xl-12">
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
-                                <h3 class="title-3 m-b-30">
+                                <h3 class="title-3 m-b-30 white-text">
                                     <i class="zmdi zmdi-calendar-check"></i>Novedades</h3>
                                 
-                                <div class="table-responsive table-data">
+                                <div class="table-data">
                                     <table class="table" ng-if="updates.length != 0">
                                         <thead>
                                             <tr>
-                                                <td>Empleado</td>
-                                                <td>Tipo de novedad</td>
-                                                <td>Monto/Cantidad</td>
-                                                <td>Fecha de creación</td>
-                                                <td>Acciones</td>
+                                                <td class="white-text">Empleado</td>
+                                                <td class="white-text">Tipo de novedad</td>
+                                                <td class="white-text">Monto/Cantidad</td>
+                                                <td class="white-text">Fecha de creación</td>
+                                                <td class="white-text">Acciones</td>
                                             </tr>
                                         </thead>
-                                        <tbody>
+                                        <tbody class="white-background">
                                             <tr ng-repeat="item in updates">
                                                 <td>
                                                     <div class="table-data__info">
