--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -84,24 +84,25 @@
 
         <section>
             <div class="section__content section__content--p30">
-                <div class="container-fluid ">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-xl-12">
                             <!-- USER DATA-->
                             <div class="user-data m-b-40">
-                                <h3 class="title-3 m-b-30"><i class="zmdi zmdi-accounts"></i>Empleados</h3>
-                                <div class="table-responsive table-data">
+                                <h3 class="title-3 m-b-30 white-text"><i class="zmdi zmdi-accounts"></i>Empleados</h3>
+                                <div class="table-data">
                                     <table class="table" ng-if="employees.length != 0">
-                                        <thead>
+                                        <thead class="white-text">
                                             <tr>
-                                                <td>Nombre / DNI</td>
-                                                <td>Tipo de Salario</td>
-                                                <td>Sueldo</td>
-                                                <td>Estado</td>
-                                                <td>Acciones</td>
+                                                <td class="white-text">Nombre / DNI</td>
+                                                <td class="white-text">Tipo de Salario</td>
+                                                <td class="white-text">Sueldo</td>
+                                                <td class="white-text">Estado</td>
+                                                <td class="white-text">Acciones</td>
+                                                </div>
                                             </tr>
                                         </thead>
-                                        <tbody>
+                                        <tbody class="white-background">
                                             <tr ng-repeat="employee in employees">
                                                 <td>
                                                     <div class="table-data__info">
@@ -140,7 +141,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <h3 class="title-3 m-b-30" ng-if="employees.length == 0">No tiene empleados registrados.</h3>
+                                    <h3 class="title-3 m-b-30 white-text" ng-if="employees.length == 0">No tiene empleados registrados.</h3>
                                 </div>
                             </div>
                             <!-- END USER DATA-->
