--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -85,7 +85,7 @@
 
         <section>
             <div class="section__content section__content--p30">
-                <div class="container-fluid ">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-xl-12">
                             <!-- USER DATA-->
@@ -93,7 +93,7 @@
                                 <h3 class="title-3 m-b-30 white-text">
                                     <i class="zmdi zmdi-account"></i>Datos de la cuenta
                                 </h3>
-                                <form ng-submit="updateClient()" class="white-background p-40">
+                                <form ng-submit="updateClient()" class="white-background p-40 p-b-10">
                                     <div class="form-group p-t-10">
                                         <label>Contraseña</label>
                                         <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
