Special buttons and full gray

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,7 +18,7 @@
                                 <label>Contraseña</label>
                                 <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
                             </div>
-                            <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">Ingresar</button>
+                            <button class="au-btn au-btn--block au-btn--fading m-b-20" type="submit">Ingresar</button>
                         </form>
                         <div class="register-link">
                             <p>
