--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -3,7 +3,7 @@
     <aside class="menu-sidebar2">
         <div class="logo">
             <a href="#">
-                <h2 style="color: white">¡Sueldos Ya!</h2>
+                <h2 class="white-text">¡Sueldos Ya!</h2>
             </a>
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
