--- a/views/register.hbs
+++ b/views/register.hbs
@@ -69,7 +69,7 @@
                                     <option value="5">5° día del mes siguiente</option>
                                 </select>
                             </div>
-                            <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit" ng-disabled="variables.isSubmitting">registrar</button>
+                            <button class="au-btn au-btn--block au-btn--fading m-b-20" type="submit" ng-disabled="variables.isSubmitting">registrar</button>
                         </form>
                         <div class="register-link">
                             <p>
