Delete Update y Front Update

--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -150,7 +150,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <h3 class="title-3 m-b-30" ng-if="updates.length == 0">No tiene novedades registradas.</h3>
+                                    <h3 class="title-3 m-b-30 white-text" ng-if="bills.length == 0">No tiene facturas registradas.</h3>
                                 </div>
                             </div>
                             <!-- END USER DATA-->
