--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -128,15 +128,17 @@
                                                     <span ng-if="employee.status == 'inactive'" class="state inactive">Inactivo</span>
                                                 </td>
                                                 <td ng-if="employee.status == 'active'">
+                                                    <button class="action-icon" title="Agregar novedad" data-toggle="modal" data-target="#largeModal2" ng-click="getEmployee(employee._id)">
+                                                        <i class="fa fa-plus"></i>
+                                                    </button>
                                                     <button class="action-icon" title="Editar empleado" data-toggle="modal" data-target="#largeModal" ng-click="getEmployee(employee._id)">
                                                         <i class="fa fa-edit"></i>
                                                     </button>
                                                     <button class="action-icon" title="Eliminar empleado" data-toggle="modal" data-target="#smallModal" ng-click="getEmployee(employee._id)">
                                                         <i class="fa fa-trash"></i>
                                                     </button>
-                                                    <button class="action-icon" title="Agregar novedad" data-toggle="modal" data-target="#largeModal2" ng-click="getEmployee(employee._id)">
-                                                        <i class="fa fa-plus"></i>
-                                                    </button>
+                                                </td>
+                                                <td ng-if="employee.status == 'inactive'">
                                                 </td>
                                             </tr>
                                         </tbody>
