--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
             <div class="account2">
-                <h4 class="name fade-text">{{user.name}}</h4>
+                <h4 class="name fade-text" ng-bind="form.name"> </h4>
                 <a href="/logout">Cerrar sesión</a>
             </div>
             <nav class="navbar-sidebar2">
@@ -57,7 +57,7 @@
                                 <div class="au-breadcrumb-left">
                                     <span class="au-breadcrumb-span">Usted está aquí:</span>
                                     <ul class="list-unstyled list-inline au-breadcrumb__list">
-                                        <li class="list-inline-item">Datos de la cuenta</li>
+                                        <li class="list-inline-item">Cuenta</li>
                                     </ul>
                                 </div>
                                 <button class="au-btn au-btn-icon au-btn--red" type="button" data-toggle="modal"
