--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -100,6 +100,7 @@
                                             <td>IVA</td>
                                             <td>Total</td>
                                             <td>Estado</td>
+                                            <td>Acciones</td>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -145,7 +146,13 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <span ng-if="bill.status == 'pending'" class="state pending">Pendiente</span>
+                                                    <span ng-if="bill.status == 'payment_pending'" class="state pending">Pendiente</span>
+                                                    <span ng-if="bill.status == 'payment_closed'" class="state pending">Pagado</span>
+                                                </td>
+                                                <td>
+                                                    <button class="action-icon" title="Pagar factura" data-toggle="modal" data-target="#smallModal" ng-click="payBill(bill._id)">
+                                                        <i class="fa fa-edit"></i>
+                                                    </button>
                                                 </td>
                                             </tr>
                                         </tbody>
