--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
             <div class="account2">
-                <h4 class="name fade-text">{{user.name}}</h4>
+                <h4 class="name fade-text" ng-bind="form.name"></h4>
                 <a href="/logout">Cerrar sesión</a>
             </div>
             <nav class="navbar-sidebar2">
