--- a/views/payroll.hbs
+++ b/views/payroll.hbs
@@ -124,7 +124,8 @@
                                             </td>
                                             <td>
                                                 <div class="table-data__info">
-                                                    <span ng-if="payroll.salary.status == 'pending'" class="state pending">Pendiente</span>
+                                                    <span ng-if="payroll.salary.status == 'payroll_finished'" class="state pending">Liquidado</span>
+                                                    <span ng-if="payroll.salary.status == 'payment_sent'" class="state active">Enviado</span>
                                                 </div>
                                             </td>
                                         </tr>
