--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -167,5 +167,25 @@
             </div>
             <!-- END PAGE CONTAINER-->
         </section>
+        <!-- DELETE UPDATE -->
+        <div class="modal fade" id="smallModal" tabindex="-2" role="dialog" aria-labelledby="smallModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="largeModalLabel">No se puede vovler para atrás si nos pagas ...</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-modal-btn">Cancelar</button>
+                        <button type="button" class="btn btn-primary" ng-click="payBill()" ng-disabled="variables.isSubmitting">Pagar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END DELETE UPDATE -->
     </div>
 </div>
