--- a/views/login.hbs
+++ b/views/login.hbs
@@ -23,7 +23,7 @@
                         <div class="register-link">
                             <p>
                                 ¿No tienes unas cuenta?
-                                <a href="/register">Regístrate</a>
+                                <a class="textfading" href="/register">Regístrate</a>
                             </p>
                         </div>
                     </div>
