--- a/views/register.hbs
+++ b/views/register.hbs
@@ -74,7 +74,7 @@
                         <div class="register-link">
                             <p>
                                 ¿Ya tiene una cuenta?
-                                <a href="/login">Accede</a>
+                                <a class="textfading" href="/login">Accede</a>
                             </p>
                         </div>
                     </div>
