--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>{{title}}</title>
+    <title>Sueldos Ya!</title>
 
     <!-- Fontfaces CSS-->
     <link href="/vendor/css/font-face.css" rel="stylesheet" media="all">
