--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,30 +1,32 @@
 <div class="page-wrapper" ng-controller="LoginController">
-    <div class="page-content--bge5  fullfading">
-        <div class="container">
-            <div class="login-wrap">
-                <div class="login-content">
-                    <div class="login-logo">
-                        <a href="#">
-                            <h1 class="titlefading">¡Sueldos Ya!</h1>
-                        </a>
-                    </div>
-                    <div class="login-form">
-                        <form ng-submit="login()">
-                            <div class="form-group">
-                                <label>Usuario</label>
-                                <input ng-model="form.username" class="au-input au-input--full" type="text" name="username" placeholder="Usuario o CUIT" required>
+    <div class="page-content--bge4 background-picture">
+        <div class="fullfading">
+            <div class="container">
+                <div class="login-wrap">
+                    <div class="login-content">
+                        <div class="login-logo">
+                            <a href="#">
+                                <h1 class="titlefading">¡Sueldos Ya!</h1>
+                            </a>
+                        </div>
+                        <div class="login-form">
+                            <form ng-submit="login()">
+                                <div class="form-group">
+                                    <label>Usuario</label>
+                                    <input ng-model="form.username" class="au-input au-input--full" type="text" name="username" placeholder="Usuario o CUIT" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>Contraseña</label>
+                                    <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
+                                </div>
+                                <button class="au-btn au-btn--block au-btn--fading m-b-20" type="submit">Ingresar</button>
+                            </form>
+                            <div class="register-link">
+                                <p>
+                                    ¿No tienes unas cuenta?
+                                    <a class="textfading" href="/register">Regístrate</a>
+                                </p>
                             </div>
-                            <div class="form-group">
-                                <label>Contraseña</label>
-                                <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
-                            </div>
-                            <button class="au-btn au-btn--block au-btn--fading m-b-20" type="submit">Ingresar</button>
-                        </form>
-                        <div class="register-link">
-                            <p>
-                                ¿No tienes unas cuenta?
-                                <a class="textfading" href="/register">Regístrate</a>
-                            </p>
                         </div>
                     </div>
                 </div>
