--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,86 +1,88 @@
 <div class="page-wrapper" ng-controller="RegisterController">
-    <div class="page-content--bge5">
-        <div class="container login fullfading">
-            <div class="login-wrap">
-                <div class="login-content">
-                    <div class="login-logo">
-                        <a href="#">
-                            <h1 class="titlefading">¡Sueldos Ya!</h1>
-                        </a>
-                    </div>
-                    <div class="login-form">
-                        <form ng-submit="registerClient()">
-                            <div class="form-group">
-                                <label>Usuario</label>
-                                <input ng-model="form.username" class="au-input au-input--full" type="text" name="username" placeholder="Usuario" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Contraseña</label>
-                                <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Nombre</label>
-                                <input ng-model="form.name" class="au-input au-input--full" type="text" name="name" placeholder="Nombre" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Clave Bancaria Uniforme (CBU)</label>
-                                <input ng-model="form.cbu" class="au-input au-input--full" type="text" name="name" placeholder="CBU" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Entidad legal</label>
-                                <div class="form-check">
-                                    <div class="radio">
-                                        <label for="physical" class="form-check-label ">
-                                            <input ng-model="form.person_type" id="physical" type="radio" name="person_type" value="physical" class="form-check-input" required>Física
-                                        </label>
-                                    </div>
-                                    <div class="radio">
-                                        <label for="legal_entity" class="form-check-label ">
-                                            <input ng-model="form.person_type" id="legal_entity" type="radio" name="person_type" value="legal_entity" class="form-check-input" required>Jurídica
-                                        </label>
+    <div class="page-content--bge5 background-picture">
+        <div class="fullfading">
+            <div class="container ">
+                <div class="login-wrap">
+                    <div class="login-content">
+                        <div class="login-logo">
+                            <a href="#">
+                                <h1 class="titlefading">¡Sueldos Ya!</h1>
+                            </a>
+                        </div>
+                        <div class="login-form">
+                            <form ng-submit="registerClient()">
+                                <div class="form-group">
+                                    <label>Usuario</label>
+                                    <input ng-model="form.username" class="au-input au-input--full" type="text" name="username" placeholder="Usuario" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>Contraseña</label>
+                                    <input ng-model="form.password" class="au-input au-input--full" type="password" name="password" placeholder="Contraseña" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>Nombre</label>
+                                    <input ng-model="form.name" class="au-input au-input--full" type="text" name="name" placeholder="Nombre" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>Clave Bancaria Uniforme (CBU)</label>
+                                    <input ng-model="form.cbu" class="au-input au-input--full" type="text" name="name" placeholder="CBU" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>Entidad legal</label>
+                                    <div class="form-check">
+                                        <div class="radio">
+                                            <label for="physical" class="form-check-label ">
+                                                <input ng-model="form.person_type" id="physical" type="radio" name="person_type" value="physical" class="form-check-input" required>Física
+                                            </label>
+                                        </div>
+                                        <div class="radio">
+                                            <label for="legal_entity" class="form-check-label ">
+                                                <input ng-model="form.person_type" id="legal_entity" type="radio" name="person_type" value="legal_entity" class="form-check-input" required>Jurídica
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <label>Dirección</label>
+                                    <input ng-model="form.address" class="au-input au-input--full" type="text" name="address" placeholder="Dirección">
+                                </div>
+                                <div class="form-group">
+                                    <label>Cuit</label>
+                                    <input ng-model="form.cuit" class="au-input au-input--full" type="text" name="cuit" placeholder="Cuit" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>IVA</label>
+                                    <input ng-model="form.iva" class="au-input au-input--full" type="text" name="iva" placeholder="IVA"required>
+                                </div>
+                                <div class="form-group" ng-show="form.person_type == 'legal_entity'">
+                                    <label>Ingresos brutos</label>
+                                    <input ng-model="form.gross_income" class="au-input au-input--full" type="text" name="gross_income" placeholder="Ingresos brutos" ng-required="form.person_type == 'legal_entity'">
+                                </div>
+                                <div class="form-group">
+                                    <label>Día de pago por defecto</label>
+                                    <select ng-model="form.pay_date" name="select" id="select" class="form-control gray-text selector-adapt" style="height: 44px;" required>
+                                        <option value="">Seleccione una opción</option>
+                                        <option value="0">Último día del mes</option>
+                                        <option value="1">1° día del mes siguiente</option>
+                                        <option value="2">2° día del mes siguiente</option>
+                                        <option value="3">3° día del mes siguiente</option>
+                                        <option value="4">4° día del mes siguiente</option>
+                                        <option value="5">5° día del mes siguiente</option>
+                                    </select>
+                                </div>
+                                <button class="au-btn au-btn--block au-btn--fading m-b-20" type="submit" ng-disabled="variables.isSubmitting">registrar</button>
+                            </form>
+                            <div class="register-link">
+                                <p>
+                                    ¿Ya tiene una cuenta?
+                                    <a class="textfading" href="/login">Accede</a>
+                                </p>
                             </div>
-                            <div class="form-group">
-                                <label>Dirección</label>
-                                <input ng-model="form.address" class="au-input au-input--full" type="text" name="address" placeholder="Dirección">
-                            </div>
-                            <div class="form-group">
-                                <label>Cuit</label>
-                                <input ng-model="form.cuit" class="au-input au-input--full" type="text" name="cuit" placeholder="Cuit" required>
-                            </div>
-                            <div class="form-group">
-                                <label>IVA</label>
-                                <input ng-model="form.iva" class="au-input au-input--full" type="text" name="iva" placeholder="IVA"required>
-                            </div>
-                            <div class="form-group" ng-show="form.person_type == 'legal_entity'">
-                                <label>Ingresos brutos</label>
-                                <input ng-model="form.gross_income" class="au-input au-input--full" type="text" name="gross_income" placeholder="Ingresos brutos" ng-required="form.person_type == 'legal_entity'">
-                            </div>
-                            <div class="form-group">
-                                <label>Día de pago por defecto</label>
-                                <select ng-model="form.pay_date" name="select" id="select" class="form-control" required>
-                                    <option value="">Seleccione una opción</option>
-                                    <option value="0">Último día del mes</option>
-                                    <option value="1">1° día del mes siguiente</option>
-                                    <option value="2">2° día del mes siguiente</option>
-                                    <option value="3">3° día del mes siguiente</option>
-                                    <option value="4">4° día del mes siguiente</option>
-                                    <option value="5">5° día del mes siguiente</option>
-                                </select>
-                            </div>
-                            <button class="au-btn au-btn--block au-btn--fading m-b-20" type="submit" ng-disabled="variables.isSubmitting">registrar</button>
-                        </form>
-                        <div class="register-link">
-                            <p>
-                                ¿Ya tiene una cuenta?
-                                <a class="textfading" href="/login">Accede</a>
-                            </p>
                         </div>
                     </div>
-                </div>
-                <div class="alert alert-danger" role="alert" ng-if="variables.showError">
-                    No se pudo crear el usuario, pruebe más tarde
+                    <div class="alert alert-danger" role="alert" ng-if="variables.showError">
+                        No se pudo crear el usuario, pruebe más tarde
+                    </div>
                 </div>
             </div>
         </div>
