--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -91,16 +91,16 @@
                                     <table class="table" ng-if="bills.length != 0">
                                         <thead class="white-text">
                                         <tr>
-                                            <td>N° Factura</td>
-                                            <td>Fecha Vencimiento</td>
-                                            <td>Costo base</td>
-                                            <td>Cant. empleados</td>
-                                            <td>Costo por empleado</td>
-                                            <td>Total bruto</td>
-                                            <td>IVA</td>
-                                            <td>Total</td>
-                                            <td>Estado</td>
-                                            <td>Acciones</td>
+                                            <td class="white-text">N° Factura</td>
+                                            <td class="white-text">Fecha Vencimiento</td>
+                                            <td class="white-text">Costo base</td>
+                                            <td class="white-text">Cant. empleados</td>
+                                            <td class="white-text">Costo por empleado</td>
+                                            <td class="white-text">Total bruto</td>
+                                            <td class="white-text">IVA</td>
+                                            <td class="white-text">Total</td>
+                                            <td class="white-text">Estado</td>
+                                            <td class="white-text">Acciones</td>
                                         </tr>
                                         </thead>
                                         <tbody  class="white-background">
@@ -173,7 +173,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="largeModalLabel">No se puede vovler para atrás si nos pagas ...</h5>
+                        <h5 class="modal-title" id="largeModalLabel">¡Pagá Gil!</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
