--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -116,7 +116,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Día de pago por defecto</label>
-                                        <select ng-model="form.pay_date" name="select" id="select" class="form-control" required>
+                                        <select ng-model="form.pay_date" name="select" id="select" class="form-control selector-adapt" style="height: 44px;" required>
                                             <option value="">Seleccione una opción</option>
                                             <option value="0">Último día del mes</option>
                                             <option value="1">1° día del mes siguiente</option>
