--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,3 +53,202 @@ body .page-wrapper {
 .navbar-sidebar2 .navbar__list li span > i {
     margin-right: 20px;
 }
+
+.au-btn--fading {
+    background: linear-gradient(-75deg, #00ffbb, #8F01ED, #ff00e1, #ff003f, #ef6e3b);
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+
+.au-btn--fading:hover {
+    background: linear-gradient(-75deg, #00ffbb, #8F01ED, #ff00e1, #ff003f, #ef6e3b);
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.au-btn--fading:active {
+    background: linear-gradient(-75deg, #008461, #520089, #910080, #9b0026, #8c3f21);
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.gray-text {
+    color: #808080 !important;
+}
+
+.selector-adapt {
+    font-size: 14px !important;
+}
+
+.white-text {
+    color: white !important;
+}
+
+.white-background {
+    background-color: white !important;
+}
+
+.background-picture {
+    background: url("../images/background-log.jpg") no-repeat fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.fade-background{
+    background-color: #8F01ED;
+}
+
+.fade-text{
+    color: #8F01ED;
+}
+
+.fading {
+    background: linear-gradient(to left, #00d8ff, #8F01ED, #8F01ED);
+    background-size: 150% 150%;
+    -webkit-animation: Gradient 7s ease infinite;
+    -moz-animation: Gradient 7s ease infinite;
+    animation: Gradient 7s ease infinite;
+}
+
+.fullfading {
+    height: 100%;
+    background: linear-gradient(-75deg, rgba(0, 255, 187, 0.6), rgba(143, 1, 237, 0.6), rgba(255, 0, 225, 0.6), rgba(255, 0, 63, 0.6), rgba(239, 110, 59, 0.6));
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+}
+
+.textfading {
+    background: linear-gradient(-75deg, #00ffbb, #8F01ED, #ff00e1, #ff003f, #ef6e3b);
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+}
+
+.titlefading {
+    background: linear-gradient(-75deg, #00ffbb, #8F01ED, #ff00e1, #ff003f, #ef6e3b);
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.4);
+}
+
+@-webkit-keyframes Gradient {
+    0% {background-position: 0% 50%}
+    50% {background-position: 100% 50%}
+    100% {background-position: 0% 50%}
+}
+
+@-moz-keyframes Gradient {
+    0% {background-position: 0% 50%}
+    50% {background-position: 100% 50%}
+    100% {background-position: 0% 50%}
+}
+
+@keyframes Gradient {
+    0% {background-position: 0% 50%}
+    50% {background-position: 100% 50%}
+    100% {background-position: 0% 50%}
+}
+
+@media (max-width: 991px) {
+    .header-desktop2 {
+        left: 0;
+        position: relative;
+    }
+}
+
+.background-picture {
+    background: url("https://i.ytimg.com/vi/GLSwpGVRXzM/maxresdefault.jpg") no-repeat fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.fade-background{
+    background-color: #8F01ED;
+}
+
+.fade-text{
+    color: #8F01ED;
+}
+
+.fading {
+    background: linear-gradient(to left, #00d8ff, #8F01ED, #8F01ED);
+    background-size: 150% 150%;
+    -webkit-animation: Gradient 7s ease infinite;
+    -moz-animation: Gradient 7s ease infinite;
+    animation: Gradient 7s ease infinite;
+}
+
+.fullfading {
+    height: 100%;
+    background: linear-gradient(-75deg, rgba(0, 255, 187, 0.6), rgba(143, 1, 237, 0.6), rgba(255, 0, 225, 0.6), rgba(255, 0, 63, 0.6), rgba(239, 110, 59, 0.6));
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+}
+
+.textfading {
+    background: linear-gradient(-75deg, #00ffbb, #8F01ED, #ff00e1, #ff003f, #ef6e3b);
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+}
+
+.titlefading {
+    background: linear-gradient(-75deg, #00ffbb, #8F01ED, #ff00e1, #ff003f, #ef6e3b);
+    background-size: 1600% 1600%;
+    -webkit-animation: Gradient 30s ease infinite;
+    -moz-animation: Gradient 30s ease infinite;
+    animation: Gradient 30s ease infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.4);
+}
+
+@-webkit-keyframes Gradient {
+    0% {background-position: 0% 50%}
+    50% {background-position: 100% 50%}
+    100% {background-position: 0% 50%}
+}
+
+@-moz-keyframes Gradient {
+    0% {background-position: 0% 50%}
+    50% {background-position: 100% 50%}
+    100% {background-position: 0% 50%}
+}
+
+@keyframes Gradient {
+    0% {background-position: 0% 50%}
+    50% {background-position: 100% 50%}
+    100% {background-position: 0% 50%}
+}
