Typos y Colores Botones Delete Front

--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -54,7 +54,7 @@
                         <div class="col-md-12">
                             <div class="au-breadcrumb-content">
                                 <div class="au-breadcrumb-left">
-                                    <span class="au-breadcrumb-span">Usted está aquí:</span>
+                                    <span class="au-breadcrumb-span">Usted se encuentra aquí:</span>
                                     <ul class="list-unstyled list-inline au-breadcrumb__list">
                                         <li class="list-inline-item">Empleados</li>
                                     </ul>
@@ -244,7 +244,7 @@
                         <form>
                             <div class="form-group">
                                 <label>Tipo de novedad</label>
-                                <select ng-model="updateForm.update" name="select" id="select" class="form-control" required>
+                                <select ng-model="updateForm.update" name="select" id="select" class="form-control gray-text selector-adapt" style="height: 44px;" required>
                                     <option value="">Seleccione un tipo de novedad</option>
                                     <option value="salary_change" ng-if="form.payroll_type == 'monthly'">Cambio de Sueldo</option>
                                     <option value="per_hour_change" ng-if="form.payroll_type == 'per_hour'">Cambio de valor por hora</option>
@@ -277,7 +277,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="largeModalLabel">Esta seguro que desea eliminar el empleado <span ng-bind="form.name"></span></h5>
+                        <h5 class="modal-title" id="largeModalLabel">¿Está seguro que desea eliminar al empleado conocido como "<span ng-bind="form.name"></span>"?</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -285,7 +285,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-modal-btn3">Cancelar</button>
-                        <button type="button" class="btn btn-primary" ng-click="deleteEmployee()" ng-disabled="variables.isSubmitting">Eliminar</button>
+                        <button type="button" class="btn btn-danger" ng-click="deleteEmployee()" ng-disabled="variables.isSubmitting">Eliminar</button>
                     </div>
                 </div>
             </div>
