--- a/views/bills.hbs
+++ b/views/bills.hbs
@@ -54,7 +54,7 @@
                         <div class="col-md-12">
                             <div class="au-breadcrumb-content">
                                 <div class="au-breadcrumb-left">
-                                    <span class="au-breadcrumb-span">Usted está aquí:</span>
+                                    <span class="au-breadcrumb-span">Usted se encuentra aquí:</span>
                                     <ul class="list-unstyled list-inline au-breadcrumb__list">
                                         <li class="list-inline-item">Facturas</li>
                                     </ul>
@@ -133,7 +133,7 @@
                                                 </td>
                                                 <td>
                                                     <button class="action-icon" title="Pagar factura" data-toggle="modal" data-target="#smallModal" ng-click="setBillId(bill._id)">
-                                                        <i class="fa fa-check-circle-o"></i>
+                                                        <i class="fa fa-dollar"></i>
                                                     </button>
                                                 </td>
                                             </tr>
@@ -155,7 +155,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="largeModalLabel">¡Pagá Gil!</h5>
+                        <h5 class="modal-title" id="largeModalLabel">¿Está seguro que desea pagar esta factura?</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
