--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -76,6 +76,8 @@
             <div class="section__content section__content--p30">
                 <div class="container-fluid">
                     <div class="header-wrap2">
+                        <div class="loader">
+                        </div>
                     </div>
                 </div>
             </div>
