--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -252,3 +252,34 @@ body .page-wrapper {
     50% {background-position: 100% 50%}
     100% {background-position: 0% 50%}
 }
+
+h2 {
+    color: white;
+    user-select:none;
+}
+
+h2 span {
+    display:inline-block;
+}
+
+h2:hover span {
+    animation:bounce .6s;
+}
+
+@keyframes bounce {
+    0%,100%{ transform:translate(0); }
+    25%{ transform:rotateX(20deg) translateY(2px) rotate(-3deg); }
+    50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
+}
+
+h2 span:nth-child(2){ animation-delay:.05s; }
+h2 span:nth-child(3){ animation-delay:.1s; }
+h2 span:nth-child(4){ animation-delay:.15s; }
+h2 span:nth-child(5){ animation-delay:.2s; }
+h2 span:nth-child(6){ animation-delay:.25s; }
+h2 span:nth-child(7){ animation-delay:.3s; }
+h2 span:nth-child(8){ animation-delay:.35s; }
+h2 span:nth-child(9){ animation-delay:.4s; }
+h2 span:nth-child(10){ animation-delay:.45s; }
+h2 span:nth-child(11){ animation-delay:.5s; }
+h2 span:nth-child(12){ animation-delay:.55s; }
