--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -2,8 +2,8 @@
     <!-- MENU SIDEBAR-->
     <aside class="menu-sidebar2">
         <div class="logo">
-            <a href="#">
-                <h2 class="white-text">¡Sueldos Ya!</h2>
+            <a href="/employees">
+                <h2><span>¡</span><span>S</span><span>U</span><span>E</span><span>L</span><span>D</span><span>O</span><span>S</span> <span>Y</span><span>A</span><span>!</span></h2>
             </a>
         </div>
         <div class="menu-sidebar2__content js-scrollbar1">
