--- a/views/updates.hbs
+++ b/views/updates.hbs
@@ -131,7 +131,7 @@
                                                 </td>
                                                 <td>
                                                     <div class="table-data__info">
-                                                        <button class="action-icon" data-toggle="modal" data-target="#smallModal" ng-click="getUpdate(item.update._id)" title="Eliminar novedad">
+                                                        <button class="action-icon" data-toggle="modal" data-target="#smallModal" ng-click="setUpdateId(item.update._id)" title="Eliminar novedad">
                                                             <i class="fa fa-trash"></i>
                                                         </button>
                                                     </div>
